# decisiongpt

./: .env.example  .gitignore  README.md  build.ps1  docker-compose.yml  package-lock.json  plan.md
backend/: .env.desktop.example  Dockerfile  init.sql  pyproject.toml  run_desktop.py  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_chat_canvas_columns.py  003_add_advisors_table.py  004_add_background_tasks_table.py  005_add_conversation_state_fields.py  006_add_user_profiles_and_observations.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  database_sync.py  dependencies.py  logging_config.py  main.py
backend/app/ai/: __init__.py  gateway.py  validators.py
backend/app/ai/advisors/: __init__.py  classifier.py  registry.py
backend/app/ai/prompts/: __init__.py  phase1.py  phase2.py  psychologist_prompts.py  system.py
backend/app/guardrails/: __init__.py  checker.py
backend/app/models/: __init__.py  advisor.py  app_settings.py  background_task.py  calibration_model.py  decision.py  decision_event.py  decision_node.py  decision_outcome.py  memory.py  observation.py  types.py  user.py  user_profile.py
backend/app/routers/: __init__.py  adaptive_questions.py  advisors.py  chat.py  decisions.py  nodes.py  observations.py  profile.py  settings.py  tasks.py
backend/app/schemas/: __init__.py  ai_responses.py  canvas.py  decision.py  move.py  outcome.py  psychologist_state.py  question.py  tasks.py
backend/app/services/: __init__.py  adaptive_question_service.py  calibration_service.py  chat_service.py  decision_service.py  heuristics_engine.py  memory_service.py  observation_service.py  pattern_detector.py  phase1_service.py  phase2_service.py  psychologist_engine.py  question_generator.py  question_value_scorer.py  task_service.py  user_context_service.py
backend/app/tasks/: __init__.py  chat_tasks.py
backend/app/templates/: __init__.py  base_template.py  double_text.py  first_date_plan.py  gym_approach.py  kiss_timing.py
backend/app/tests/: __init__.py  test_branching.py  test_brier_score.py  test_guardrails.py  test_phase_switching.py  test_schema_validation.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+75 files in other folders)
