[project]
name = "gentleman-coach"
version = "1.0.0"
description = "A coaching app for romantic relationship decisions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    # SQLite support (for desktop mode)
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
# PostgreSQL support (for web deployment)
postgres = [
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "psycopg2-binary>=2.9.9",
]
# Celery/Redis support (for web deployment with background tasks)
celery = [
    "celery>=5.3.0",
    "redis>=5.0.0",
]
# Full web deployment
web = [
    "gentleman-coach[postgres,celery]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
