[package]
name = "decision-canvas"
version = "1.0.0"
description = "Decision Canvas - AI-powered decision making"
authors = ["Decision Canvas Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-create-dir", "fs-write-file", "path-all", "process-all", "fs-read-file", "fs-read-dir", "fs-exists", "shell-sidecar", "shell-open", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
